...
    <string name="app_copyright">&#169;PedometerSample/kasa_le</string>

    <string name="label_step">歩</string>
    <string name="label_step_count">歩数</string>
    <string name="hint_edit_step">歩数を入力</string>
    <string name="resist">登録</string>
    <string name="update">更新</string>
    <string name="delete">削除</string>
    <string name="menu_label_add_record">記録を追加</string>
    <string name="menu_label_share_sns">共有</string>
    <string name="label_log_prefix">この日は</string>
    <string name="label_log_suffix">歩 歩きました</string>

    <string name="title_activity_log_item">今日は何歩歩いた？</string>
    <string name="title_activity_sign_in">サインイン</string>
    <string name="title_activity_sign_out">サインアウト</string>
...
    <string name="label_date">日付</string>
    <string name="label_select_date">日付を選ぶ</string>
    <string name="label_level">気分</string>
    <string name="label_weather">天気</string>
    <string name="error">エラー</string>
    <string name="close">閉じる</string>
    <string name="error_validation_future_date">未来の日付はダメです</string>
    <string name="error_validation_empty_count">0歩はないでしょ</string>

    <string name="confirm">確認</string>
    <string name="message_delete_confirm">削除する？</string>
    <string name="title_activity_twitter_share">Twitterにシェア</string>
    <string name="share_sns">SNSで共有</string>
    <string name="label_twitter">Twitter</string>
...
