...
    <EditText
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_ocr_result"
            android:textSize="24sp"
            tools:text="12345" android:textAlignment="center" android:inputType="numberSigned"/>
    <TextView
            android:text="直すときは文字をタップして下さい。"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>
</LinearLayout>
